- html 컨텐츠 수정

--- a/assets/01-html/01-htmlStart/01-html_start.html
+++ b/assets/01-html/01-htmlStart/01-html_start.html
@@ -6,11 +6,13 @@
 
 	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
-		<p>HTML은 1989년부터 Tim Berners-Lee, Robert Cailliau 등의 사람들에 의해 처음 만들어져 사용되기 시작되었습니다.</p>
-		<p>HTML은 프로그래밍 언어가 아닙니다. 콘텐츠의 구조를 정의하는 마크업 언어입니다.</p>
-		<p>HTML은 콘텐츠의 서로 다른 부분들을 씌우거나(wrap) 감싸서(enclose) 다른 형식으로 보이게 하거나 특정한 방식으로 동작하도록 하는 일련의 요소(elements)로 이루어져 있습니다.</p>
-		<p>tags로 감싸는 것으로 단어나 이미지를 다른 어딘가로 하이퍼링크(hyperlink)하거나 단어들을 이탤릭체로 표시하고 글씨체를 크게 또는 작게 만드는 등의 일을 할 수 있습니다.</p>
-		<p>마크업 언어는 컴퓨터가 텍스트를 처리하고 표시되는 방법을 제어하기 위한 소통 방법입니다. 이를 위해 HTML은 tags와 attributes라는 두 가지를 사용합니다.</p>
+		<p>
+			<code>HTML</code>은 1989년부터 Tim Berners-Lee, Robert Cailliau 등의 사람들에 의해 처음 만들어져 사용되기 시작되었습니다.<br>
+			<code>HTML</code>은 프로그래밍 언어가 아닙니다. 콘텐츠의 구조를 정의하는 마크업 언어입니다.<br>
+			<code>HTML</code>은 콘텐츠의 서로 다른 부분들을 씌우거나(wrap) 감싸서(enclose) 다른 형식으로 보이게 하거나 특정한 방식으로 동작하도록 하는 일련의 요소(elements)로 이루어져 있습니다.<br>
+			tags로 감싸는 것으로 단어나 이미지를 다른 어딘가로 하이퍼링크(hyperlink)하거나 단어들을 이탤릭체로 표시하고 글씨체를 크게 또는 작게 만드는 등의 일을 할 수 있습니다.<br>
+			마크업 언어는 컴퓨터가 텍스트를 처리하고 표시되는 방법을 제어하기 위한 소통 방법입니다. 이를 위해 <code>HTML</code>은 tags와 attributes라는 두 가지를 사용합니다.
+		</p>
 	</blockquote>
 
 	<section class="ol_lst mt_l">
