--- a/assets/01-html/02-blockInline/03-inline_element.html
+++ b/assets/01-html/02-blockInline/03-inline_element.html
@@ -7,15 +7,26 @@
 
 	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
-		<p>대표적인 인라인 요소에는 다음과 같은 요소들이 있습니다.</p>
-		<p>span, a, img, strong, b, em, i, ins, del요소는 display 속성값이 인라인(inline)인 대표적인 요소입니다.</p>
-		<p>이 외에 다른 요소들도 많이 있습니다.</p>
+		<p>
+			대표적인 인라인 요소에는 다음과 같은 요소들이 있습니다.<br>
+			<code>span</code>,
+			<code>a</code>,
+			<code>img</code>,
+			<code>strong</code>,
+			<code>b</code>,
+			<code>em</code>,
+			<code>i</code>,
+			<code>ins</code>,
+			<code>del</code>요소는
+			<code>display</code> 속성값이 인라인(inline)인 대표적인 요소입니다.<br>
+			이 외에 다른 요소들도 많이 있습니다.
+		</p>
 	</blockquote>
 
 	<section class="ol_lst mt_l">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			display 속성값이 인라인(inline)인 요소는 새로운 라인(line)에서 시작하지 않습니다.
+			<code>display</code> 속성값이 인라인(inline)인 요소는 새로운 라인(line)에서 시작하지 않습니다.
 			또한, 요소의 너비(width)도 해당 라인 전체가 아닌 해당 HTML 요소의 내용(content)만큼만 차지합니다. 그리고 인라인 요소 안에 블록 요소가 들어 올 수 없습니다.
 		</p>
 		<ol class="indent mt_sm">
