--- a/assets/01-html/01-htmlStart/02-html_basic.html
+++ b/assets/01-html/01-htmlStart/02-html_basic.html
@@ -43,7 +43,7 @@
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;!DOCTYPE html&gt;</h2>
-		<p>현재 문서가 HTML5 문서임을 명시합니다. doctype은 문서의 최상위에 위치해야 하며, doctype의 선언 방식은 다음과 같습니다.</p>
+		<p class="indent">현재 문서가 HTML5 문서임을 명시합니다. doctype은 문서의 최상위에 위치해야 하며, doctype의 선언 방식은 다음과 같습니다.</p>
 
 		<div class="ol_lst indent">
 			<ol>
@@ -85,35 +85,35 @@
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;html&gt;</h2>
-		<p><code>&lt;html&gt;&lt;/html&gt;</code> 요소. 이 요소는 페이지 전체의 콘텐츠를 감싸며, 루트(root) 요소라고도 합니다.</p>
+		<p class="indent"><code>&lt;html&gt;&lt;/html&gt;</code> 요소. 이 요소는 페이지 전체의 콘텐츠를 감싸며, 루트(root) 요소라고도 합니다.</p>
 	</section>
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;head&gt;&lt;/head&gt;</h2>
-		<p><code>&lt;head&gt;</code> 요소. 이 요소는 HTML 페이지에 포함되어 있는 모든 것들(여러분의 페이지를 조회하는 사람들에게 보여주지 않을 콘텐츠)의 컨테이너 역할을 합니다. 여기에는 keywords와 검색 결과에 표시되길 원하는 페이지 설명, 콘텐츠를 꾸미기 위한 CSS, 문자 집합 선언 등과 같은 것들이 포함됩니다.</p>
+		<p class="indent"><code>&lt;head&gt;</code> 요소. 이 요소는 HTML 페이지에 포함되어 있는 모든 것들(여러분의 페이지를 조회하는 사람들에게 보여주지 않을 콘텐츠)의 컨테이너 역할을 합니다. 여기에는 keywords와 검색 결과에 표시되길 원하는 페이지 설명, 콘텐츠를 꾸미기 위한 CSS, 문자 집합 선언 등과 같은 것들이 포함됩니다.</p>
 	</section>
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;meta charset=&quot;utf-8&quot;&gt;</h2>
-		<p>이 요소는 문서가 사용해야 할 문자 집합을 utf-8으로 설정합니다. charset은 사용 언어에 따라 euc-kr로 설정 가능합니다.</p>
+		<p class="indent">이 요소는 문서가 사용해야 할 문자 집합을 utf-8으로 설정합니다. charset은 사용 언어에 따라 euc-kr로 설정 가능합니다.</p>
 	</section>
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;title&gt;&lt;/title&gt;</h2>
-		<p><code>&lt;title&gt;</code> 요소. 이 요소는 페이지의 제목을 설정하는 것으로 페이지가 로드되는 브라우저의 탭에 이 제목이 표시됩니다. 이 요소는 북마크나 즐겨찾기에서 페이지를 설명하는 것으로도 사용됩니다.</p>
+		<p class="indent"><code>&lt;title&gt;</code> 요소. 이 요소는 페이지의 제목을 설정하는 것으로 페이지가 로드되는 브라우저의 탭에 이 제목이 표시됩니다. 이 요소는 북마크나 즐겨찾기에서 페이지를 설명하는 것으로도 사용됩니다.</p>
 	</section>
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;body&gt;&lt;/body&gt;</h2>
-		<p><code>&lt;body&gt;</code> 요소. 이것은 페이지에 방문한 모든 웹 사용자들에게 보여주길 원하는 모든 콘텐츠를 담고 있으며, 그것이 텍스트일 수도, 이미지, 비디오, 게임, 플레이할 수 있는 오디오 트랙이나 다른 무엇이든 될 수 있습니다.</p>
+		<p class="indent"><code>&lt;body&gt;</code> 요소. 이것은 페이지에 방문한 모든 웹 사용자들에게 보여주길 원하는 모든 콘텐츠를 담고 있으며, 그것이 텍스트일 수도, 이미지, 비디오, 게임, 플레이할 수 있는 오디오 트랙이나 다른 무엇이든 될 수 있습니다.</p>
 	</section>
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;h1&gt;&lt;/h1&gt;</h2>
-		<p><code>&lt;h1&gt;</code> 요소. 문서의 제목을 의미합니다. 이 요소는 여러 검색 엔진은 각 웹 사이트의 내용을 바로 이 태그를 이용하여 키워드를 수집하고, 그 내용을 파악합니다. 따라서 HTML문서에 포함되는 제목은 이 태그로 작성해야만 검색 엔진에 의해 제대로 검색될 확률을 높일 수 있습니다.</p>
+		<p class="indent"><code>&lt;h1&gt;</code> 요소. 문서의 제목을 의미합니다. 이 요소는 여러 검색 엔진은 각 웹 사이트의 내용을 바로 이 태그를 이용하여 키워드를 수집하고, 그 내용을 파악합니다. 따라서 HTML문서에 포함되는 제목은 이 태그로 작성해야만 검색 엔진에 의해 제대로 검색될 확률을 높일 수 있습니다.</p>
 	</section>
 
 	<section class="txt_ex mt_l">
 		<h2>&lt;p&gt;&lt;/p&gt;</h2>
-		<p><code>&lt;p&gt;</code> 요소. 단락이란 내용상 끊어서 구분할 수 있는 하나하나의 부분을 의미하며, 문단이라고도 부릅니다. HTML에서는 <code>&lt;p&gt;</code>태그를 이용하여 이러한 단락을 표현합니다.</p>
+		<p class="indent"><code>&lt;p&gt;</code> 요소. 단락이란 내용상 끊어서 구분할 수 있는 하나하나의 부분을 의미하며, 문단이라고도 부릅니다. HTML에서는 <code>&lt;p&gt;</code>태그를 이용하여 이러한 단락을 표현합니다.</p>
 	</section>
