--- a/assets/01-html/02-blockInline/05-element_nesting.html
+++ b/assets/01-html/02-blockInline/05-element_nesting.html
@@ -7,7 +7,7 @@
 
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
-		<p>요소를 다른 요소의 안에 놓을 수 있습니다 — 이것을 <b>중첩(nesting)</b>이라고 부릅니다.</p>
+		<p>요소를 다른 요소의 안에 놓을 수 있습니다. 이것을 <b>중첩(nesting)</b>이라고 부릅니다.</p>
 	</section>
 
 	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.5.element_nesting1.html">
