--- a/assets/01-html/02-blockInline/06-only_empty.html
+++ b/assets/01-html/02-blockInline/06-only_empty.html
@@ -24,6 +24,6 @@
 		<p>
 			이 요소는 두 개의 속성을 포함하고 있으나 닫는 <code>&lt;/img&gt;</code> 태그가 없습니다.<br>
 			이미지 요소는 효과를 주기 위해 콘텐츠를 감싸지 않기 때문입니다.<br>
-			이 요소의 목적은 HTML 페이지에서 이미지가 나타날 위치에 이미지를 끼워 넣는 것입니다.
+			이 요소의 목적은 <code>HTML</code> 페이지에서 이미지가 나타날 위치에 이미지를 끼워 넣는 것입니다.
 		</p>
 	</section>
